--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.8",
+    "react-dom": "^16.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -17,7 +17,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4",
-    "web3": "^0.20.7"
+    "web3": "^1.5.3",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
